--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,15 @@
 <DOCTYPE! html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>MEET Website</title>
+</head>
+<body> 
+	<h1>Home Page</h1>
+	<h2>Welcome</h2>
+	<br>
+	<p><font color="green">MEET brings together young Israeli and Palestinian leaders to create positive change through technology and entrepreneurship, in partnership with the Massachusetts Institute of Technology (MIT)</font></p>
+	<strong><font color="red">Even Vegeterians like MEET</font></strong>
+
+</body>
+</html>
