--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,63 @@
 	<br>
 	<p><font color="green">MEET brings together young Israeli and Palestinian leaders to create positive change through technology and entrepreneurship, in partnership with the Massachusetts Institute of Technology (MIT)</font></p>
 	<strong><font color="red">Even Vegeterians like MEET</font></strong>
+	<br>
+	<img src="meet.png" width="100" height="130">
+	<br>
+	<a href="http://meet.mit.edu/"  style="color: black">MEET's website</a>
+	<br>
+	<table border="1">
+		<tr>
+			<th>Name</th>
+			<th>Age</th>
+			<th>Numer of siblings</th>
+		</tr>
+		<tr>
+			<td>Waseem</td>
+			<td>16</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Laith</td>
+			<td>16</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Mor</td>
+			<td>16</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Shir</td>
+			<td>15</td>
+			<td>2</td>
+		</tr>
+	</table>
+	<br>
+	<ul>
+		<li>Harrye Potter</li>
+		<li>Midnight Sun</li>
+	</ul>	
+	<br>
+	<ol>
+		<li>waseem</li>
+		<li>Laith</li>
+	</ol>
+
+	<form>
+		<input type="text" name="firstname" placeholder="firstname">
+		<input type="password" name="pwd" placeholder="password">
+		<br>
+		<input type="checkbox" name="activities" >reading
+		<input type="checkbox" name="activities" >swimming
+		<input type="checkbox" name="activities" >hicking
+		<input type="checkbox" name="activities" >hanging out with friends
+		<br>
+		<input type="radio" name="sex" >Male
+		<input type="radio" name="sex" >Female
+		<br>
+		<input type="submit" name="Submit">
+	</form>
 
 </body>
 </html>
